MODFQMMGR-216 Fix NPE